@@ -91,6 +91,8 @@ Version 1.4.1
 
 * Changed UnsupportedOperationException to IllegalStateException in RubyIO
 
+* Changed NoSuchElementException to IllegalArgumentException in RubyIO
+
 * Overrode toString() methods of all Iterables
 
 * Made RubyArray#push accept varargs
